--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ psycho/env/lib/python3.6/site-packages/tensorflow/python/_pywrap_tensorflow_inte
 psycho/env/lib/python3.6/site-packages/scipy/.dylibs/libopenblasp-r0.3.5.dev.dylib
 psycho/env/lib/python3.6/site-packages/numpy/.dylibs/libopenblasp-r0.3.5.dev.dylib
 *.pyc
-psycho/env
+psycho/env/
